budget - show in calendar

--- a/src/main/webapp/project/edit_stage.html
+++ b/src/main/webapp/project/edit_stage.html
@@ -26,6 +26,16 @@
              </div>
           </div>
           <div class="clearfix">
+            <label for="status">Status</label>
+            <div class="input">
+              <select class="medium" id="status" name="status" >
+              </select>
+              <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/status.html' rel="popover" class="_popover_basic _help">
+                <img src="/images/info.gif" width="20">
+              </a>
+            </div>
+          </div>
+          <div class="clearfix">
             <label for="class">Formação</label>
             <div class="input">
               <select name="class"></select>
