--- a/src/main/webapp/templates-hidden/dashboard_customer.html
+++ b/src/main/webapp/templates-hidden/dashboard_customer.html
@@ -222,7 +222,7 @@
           </li>            
           <li class="lift:SecuritySnippet.isNotEgrexSystem">
             <a href="/budget/list_budget?opt=budget" target="eventpage" class="lift:SecuritySnippet.hasBudgetModule _popover_basic" rel="popover" data-content="Orçamentos" data-original-title="Orçamentos">
-              <img width='32' src="/images/insert.png"/>
+              <img width='32' src="/images/budget.png"/>
             </a>
           </li>            
           <div class="lift:SecuritySnippet.IsNotMedicalSystem">            
