--- a/src/main/webapp/financial_admin/payment_forms.html
+++ b/src/main/webapp/financial_admin/payment_forms.html
@@ -242,7 +242,7 @@
                     </div>
                   </div>
                 </div>            
-                <div class="clearfix">
+                <div class="clearfix lift:SecuritySnippet.hasBpmonthlyModule">
                   <label for="bpmonthly">Baixa de sessão de Mensalidade?</label>
                   <div class="input">
                     <div class='inline-inputs'>
@@ -251,7 +251,7 @@
                     </div>
                   </div>
                 </div>            
-                <div class="clearfix">
+                <div class="clearfix lift:SecuritySnippet.hasOffSaleModule">
                   <label for="offSale">Pagamento por Convênio?</label>
                   <div class="input">
                     <div class='inline-inputs'>
@@ -260,11 +260,20 @@
                     </div>
                   </div>
                 </div>            
-                <div class="clearfix">
+                <div class="clearfix lift:SecuritySnippet.hasFidelityModule">
                   <label for="fidelity">Pagamento pts Fidelidade?</label>
                   <div class="input">
                     <div class='inline-inputs'>
                       <input name='fidelity'/>
+                      <span class="help-block"></span>
+                    </div>
+                  </div>
+                </div>            
+                <div class="clearfix lift:SecuritySnippet.hasBudgetModule">
+                  <label for="budget">Baixa de itens de Orçamento?</label>
+                  <div class="input">
+                    <div class='inline-inputs'>
+                      <input name='budget'/>
                       <span class="help-block"></span>
                     </div>
                   </div>
