--- a/src/main/webapp/activity/busy_manager.html
+++ b/src/main/webapp/activity/busy_manager.html
@@ -2,7 +2,7 @@
   <script type="text/javascript" src="/js/event_busy.js"></script>
   <div class="well">
     <div class="clearfix">
-      <label for="btn"></label>
+      <label class="hide_mobile" for="btn"></label>
       <div class="input">
         <a class="btn primary" id="new">Inserir novo</a>
       </div>
