--- a/src/main/webapp/company_log/edit.html
+++ b/src/main/webapp/company_log/edit.html
@@ -2,14 +2,12 @@
 	<div>
 		<form  method="post" class="lift:companySnippet.form">
 			<div class="well">
-				<label for="btn"></label>
+				<label class="hide_mobile" for="btn"></label>
                 <input class="btn success lift:SecuritySnippet.isNotAdminRead" type="submit" value="Salvar">
 				<a class="btn primary" href="/financial/payment_forms_list">
-					<img src="/images/money.png" width="16">
 					Formas de Pagamento
 				</a>
 				<a class="btn primary" href="/company/payroll_event_list">
-					<img src="/images/payroll.png" width="16">
 					Verbas Folha de Pagamento
 				</a>
 			</div>
@@ -183,7 +181,7 @@
 	            </div>          
           	</div>
 			<div class="well">
-	            <label for="btn"></label>
+	            <label class="hide_mobile" for="btn"></label>
 	            <div class="input">
 					<input type="submit" class="submit btn success lift:SecuritySnippet.isNotAdminRead"  value="Salvar" class="btn success"/>
 				</div>
