--- a/src/main/webapp/customer/notification_create.html
+++ b/src/main/webapp/customer/notification_create.html
@@ -33,7 +33,7 @@
 	</style>
       <form class="crud_form">
 		  <div class="well">
-	        <label for="btn"></label>
+	        <label class="hide_mobile" for="btn"></label>
 	        <a class="btn primary" href="/customer/notification_list">Lista</a>
 		    <input value="Salvar" class='btn success' type="button" id="send"/>
 		    <a class="btn primary" href="./notification_create">Inserir novo</a>
