--- a/src/main/webapp/customer/notification_list.html
+++ b/src/main/webapp/customer/notification_list.html
@@ -3,7 +3,7 @@
 	<script type="text/javascript" src="/js/notification_list.js"></script>
 	<span ng-app>
 	  <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 	    <a class="btn primary" href="./notification_create">Inserir novo</a>
 	  </div>
 	  <table class="bordered-table zebra-striped" ng-controller='NotificationController'>
