--- a/src/main/webapp/financial/account_register.html
+++ b/src/main/webapp/financial/account_register.html
@@ -7,16 +7,14 @@
   <script type="text/javascript" src="/js/jquery.tablesorter.pager.js"></script>
   <div class="hide_on_print">
     <div class="well">
-      <label for="btn"></label>
+      <label class="hide_mobile" for="btn"></label>
       <a class="btn primary new_account" id="new_account" title="Novo lançamento de conta a pagar/receber">
-        <img width="15px" src="/images/new.png"/>
         Inserir novo
       </a>
       <a  id="b_search" class="btn success b_search">
-        <img src="/images/search.png" width="16">
         Buscar
       </a>            
-      <a class="btn primary" target="_ofx_maste" href="/financial/upload_bank_file" title="Importar extrato padrão ofx"><img width="15px" src="/images/extract.png"/> Importar OFX</a>
+      <a class="btn primary" target="_ofx_maste" href="/financial/upload_bank_file" title="Importar extrato padrão ofx">Importar OFX</a>
     </div>
   </div>
   <div class='filter block-message success"'>
@@ -186,31 +184,25 @@
     <div class="hide_on_print">
       <div class="well">
         <div class="clearfix">
-          <label for="send"></label>
+          <label class="hide_mobile" for="send"></label>
           <div class="input">
             <a class="btn primary new_account" id="new_account" alt="Novo lançamento de conta a pagar/receber">
-              <img width="15px" src="/images/new.png"/>
               Inserir novo
             </a>
             <a  id="b_search" class="btn success b_search">
-              <img src="/images/search.png" width="16">
               Buscar
             </a>            
             <a id="b_dre_send" class="btn success b_dre_send">
-              <img src="/images/category.png" width="16">
               Ver DRE
             </a>
             <a id="b_remove_checked" class="btn danger b_remove_checked" alt="Excluir as contas marcadas">
-              <img src="/images/delete.png" width="16">
               Excluir
             </a>
             <a id="b_mark_as_paid" class="btn b_mark_as_paid" alt="Marcar todos os itens selecionados como pagos">
-              <img src="/images/money.png" width="16">
               Pagar
             </a>              
             <input type="hidden" class="has-financialad-module lift:SecuritySnippet.hasFinancialadModule" value="1">
             <a  id="b_aggregate" class="btn b_aggregate lift:SecuritySnippet.hasFinancialadModule">
-              <img src="/images/aggregate.png" width="16">
               Agregar
             </a>            
           </div>
@@ -284,29 +276,23 @@
 </table>
   <div class="hide_on_print">
     <div class="well">
-      <label for="btn"></label>
+      <label class="hide_mobile" for="btn"></label>
       <a class="btn primary new_account" id="new_account" alt="Novo lançamento de conta a pagar/receber">
-        <img width="15px" src="/images/new.png"/>
         Inserir novo
       </a>
       <a  id="b_search" class="btn success b_search">
-        <img src="/images/search.png" width="16">
         Buscar
       </a>            
       <a id="b_dre_send" class="btn success b_dre_send">
-        <img src="/images/category.png" width="16">
         Ver DRE
       </a>
       <a id="b_remove_checked" class="btn danger b_remove_checked" alt="Excluir as contas marcadas">
-        <img src="/images/delete.png" width="16">
         Excluir
       </a>
       <a id="b_mark_as_paid" class="btn b_mark_as_paid" alt="Marcar todos os itens selecionados como pagos">
-        <img src="/images/money.png" width="16">
         Pagar
       </a>              
       <a  id="b_aggregate" class="btn b_aggregate lift:SecuritySnippet.hasFinancialadModule">
-        <img src="/images/aggregate.png" width="16">
         Agregar
       </a>            
     </div>
