--- a/src/main/webapp/financial/monthly.html
+++ b/src/main/webapp/financial/monthly.html
@@ -47,7 +47,7 @@
 	  </script>
 	<div class="well lift:SecuritySnippet.isSuperAdmin">
 		<div class="clearfix">
-			<label for="name"></label>
+			<label class="hide_mobile" for="name"></label>
 			<div class="input-prepend">
 			  <a class="btn primary" href="/security/useCompany?id=1" title="Selecionar VilarikA - Só para super Admin">VilarikA
 			  </a>
