--- a/src/main/webapp/group/list.html
+++ b/src/main/webapp/group/list.html
@@ -1,6 +1,6 @@
 <div id="main" class="lift:surround?with=user;at=content">
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/group/edit">Inserir novo</a>
 	    <a class="btn primary" title="Cadastro de profissionais" href="/user/list"><span data-i18n='Profissionais'></span></a>
 	</div>
