--- a/src/main/webapp/product/control_panel.html
+++ b/src/main/webapp/product/control_panel.html
@@ -4,18 +4,15 @@
     <script type="text/javascript" src="/js/product_control_panel.js">
     </script>
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" alt="Movimentações: entrada, saída, transferência" href="/product_admin/inventory">
-			<img src="/images/register_movement.png" width="16px">
 			Movimentações
 		</a>
 		<a class="btn primary" alt="Cadastro de produtos" href="/product/list">
-			<img src="/images/product.png" width="16px">
 			Produtos
 		</a>
 		<a class="btn primary" alt="Solicitação de Compras" href="/product_admin/inventory?causeh=9">
-			<img src="/images/register_movement.png" width="16px">
-			Solicitação de Compras
+			Sol Compras
 		</a>
 	</div>
 	<div class='filter block-message success"'>
