--- a/src/main/webapp/product/list.html
+++ b/src/main/webapp/product/list.html
@@ -1,16 +1,13 @@
 <div id="main" class="lift:surround?with=inventory;at=content">
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/product_admin/edit">
-			<img src="/images/new.png" width="16px">
 		Inserir novo
 		</a>
 		<a class="btn primary" alt="Cadastro de tipo de produtos" href="/product/list_type">
-			<img src="/images/categorie.png" width="16px">
 		Tipos
 		</a>
 		<a class="btn primary" alt="Cadastro de linhas de produto" href="/product/list_line">
-			<img src="/images/lines.png" width="16px">
 		Linhas
 		</a>
 	</div>
