--- a/src/main/webapp/product/list_type.html
+++ b/src/main/webapp/product/list_type.html
@@ -1,13 +1,10 @@
 <div id="main" class="lift:surround?with=inventory;at=content">
   <div class="well">
-    <label for="btn"></label>
+    <label class="hide_mobile" for="btn"></label>
 	<a class="btn primary" href="/product_admin/edit_type">
-
-      <img src="/images/new.png" width="16px">
 		Inserir novo
 	</a>  
     <a class="btn primary" alt="Cadastro de produtos" href="/product/list">
-      <img src="/images/product.png" width="16px">
       Produtos
     </a>
   </div>   	
