--- a/src/main/webapp/user/list_terms.html
+++ b/src/main/webapp/user/list_terms.html
@@ -1,9 +1,8 @@
 <div id="main" class="lift:surround?with=user;at=content">
 	<div class="well">
 	  	<h1><span class="lift:CompanySnippet.thumb"> </span>Termos e Condições</h1>
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/user/terms">
-			<img src="/images/new.png" width="16">
 			Inserir novo
 		</a>
 	</div>
