--- a/src/main/webapp/activity/edit.html
+++ b/src/main/webapp/activity/edit.html
@@ -22,7 +22,7 @@
   </script>  
   <form   class="lift:form.ajax">
     <div class="well">
-      <label for="btn"></label>
+      <label class="hide_mobile" for="btn"></label>
       <a class="btn primary" href="/activity/list">Lista</a>
       <input class="btn success" type="submit" value="Salvar">
       <a class="btn primary" href="/activity/edit">Inserir novo</a>
