--- a/src/main/webapp/activity/list.html
+++ b/src/main/webapp/activity/list.html
@@ -1,6 +1,6 @@
 <div id="main" class="lift:surround?with=activity;at=content">
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/activity/edit">Inserir novo</a>
 		<a class="btn primary" href="/activity/list_type">Tipos de <span data-i18n='Serviço'></span></a>
 		<a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/tutorial.html' rel="popover" class="_popover_basic _help lift:SecuritySnippet.isSuperAdmin">
