--- a/src/main/webapp/activity/list_type.html
+++ b/src/main/webapp/activity/list_type.html
@@ -1,6 +1,6 @@
 <div id="main" class="lift:surround?with=activity;at=content">
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/activity/edit_type">Inserir novo</a>
 	    <a class="btn primary" alt="Cadastro de serviços/procedimentos" href="/activity/list"><span data-i18n='Serviços'></span></a>
 	</div>
