--- a/src/main/webapp/company/payroll_event_form.html
+++ b/src/main/webapp/company/payroll_event_form.html
@@ -2,7 +2,7 @@
     <form class="lift:form.ajax">
       <div class="well">
         <h1><span class="lift:CompanySnippet.thumb"> </span>Verbas de Folha de Pagamento</h1>
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/company/payroll_event_list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/company/payroll_event_form">Inserir novo</a>
