--- a/src/main/webapp/company/payroll_event_list.html
+++ b/src/main/webapp/company/payroll_event_list.html
@@ -1,7 +1,7 @@
 <div id="main" class="lift:surround?with=calendar;at=content">
 	<div class="well">
 	  	<h1><span class="lift:CompanySnippet.thumb"> </span>Verbas de Folha de Pagamento</h1>
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/company/payroll_event_form">Inserir novo</a>
 	</div>
 	<table class="bordered-table zebra-striped">
