--- a/src/main/webapp/financial/payment_forms_list.html
+++ b/src/main/webapp/financial/payment_forms_list.html
@@ -1,7 +1,7 @@
 <div id="main" class="lift:surround?with=calendar;at=content">
 	<div class="well">
 	  	<h1><span class="lift:CompanySnippet.thumb"> </span>Formas de Pagamento</h1>
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/financial_admin/payment_forms">Inserir novo</a>
 	</div>
 	<div class='filter block-message success'>
