--- a/src/main/webapp/financial_admin/payment_forms.html
+++ b/src/main/webapp/financial_admin/payment_forms.html
@@ -3,7 +3,7 @@
     <form class="lift:form.ajax">
       <div class="well">
         <h1><span class="lift:CompanySnippet.thumb"> </span>Formas de Pagamento</h1>
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/financial/payment_forms_list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/financial_admin/payment_forms">Inserir novo</a>
@@ -388,7 +388,7 @@
           </div>          
         </div>          
         <div class="well">
-          <label for="btn"></label>
+          <label class="hide_mobile" for="btn"></label>
           <a class="btn primary" href="/financial/payment_forms_list">Lista</a>
           <input class="btn success" type="submit" value="Salvar">
           <a class="btn primary" href="/financial_admin/payment_forms">Inserir novo</a>
