--- a/src/main/webapp/offsale/edit.html
+++ b/src/main/webapp/offsale/edit.html
@@ -2,7 +2,7 @@
   <span>
     <form   class="lift:OffSaleSnippet.maintain">
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/offsale/list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/offsale/edit">Inserir novo</a>
@@ -92,7 +92,7 @@
           </div>
       </div>
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/offsale/list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/offsale/edit">Inserir novo</a>
