--- a/src/main/webapp/quiz/list_section.html
+++ b/src/main/webapp/quiz/list_section.html
@@ -1,6 +1,6 @@
 <div id="main" class="lift:surround?with=quiz;at=content">
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/quiz_admin/edit_section">Inserir novo</a>
 	</div>
 	<div class='filter block-message success"'>
