--- a/src/main/webapp/quiz_admin/edit_domainitem.html
+++ b/src/main/webapp/quiz_admin/edit_domainitem.html
@@ -6,7 +6,7 @@
     </script>
     <form   class="lift:form.ajax">
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/quiz/list_domainitem">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/quiz_admin/edit_domainitem">Inserir novo</a>
