--- a/src/main/webapp/quiz_admin/edit_question.html
+++ b/src/main/webapp/quiz_admin/edit_question.html
@@ -1,7 +1,7 @@
 <div id="main" class="lift:surround?with=quiz&at=content">
     <form   class="lift:form.ajax">
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/quiz/list_question">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/quiz_admin/edit_question">Inserir novo</a>
