--- a/src/main/webapp/quiz_admin/quiz.html
+++ b/src/main/webapp/quiz_admin/quiz.html
@@ -1,7 +1,7 @@
 <div id="main" class="lift:surround?with=quiz&at=content">
     <form   class="lift:form.ajax">
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/quiz/list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/quiz_admin/quiz">Inserir novo</a>
@@ -81,7 +81,7 @@
         </span>
       </div>
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/quiz/list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/quiz/quiz">Inserir novo</a>
