--- a/src/main/webapp/security/change_password.html
+++ b/src/main/webapp/security/change_password.html
@@ -53,7 +53,7 @@
     <form   class="crud_form">
       <div class="well">
         <div class="clearfix">
-          <label for="btn"></label>
+          <label class="hide_mobile" for="btn"></label>
           <input class="btn success send" id="send" type="button" value="Salvar">
         </div>
       </div>
@@ -80,7 +80,7 @@
       </div>
       <div class="well">
         <div class="clearfix">
-          <label for="btn"></label>
+          <label class="hide_mobile" for="btn"></label>
           <input class="btn success send" id="send" type="button" value="Salvar">
         </div>
       </div>
