--- a/src/main/webapp/templates-hidden/bootstrap_large.html
+++ b/src/main/webapp/templates-hidden/bootstrap_large.html
@@ -9,6 +9,8 @@
       <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+    <!-- Não deixa pinças no android -->
+    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
       <title></title>
       <!-- Le fav and touch icons -->
       <link rel="shortcut icon" href="/images/icon.ico">
