--- a/src/main/webapp/templates-hidden/dashboard_customer.html
+++ b/src/main/webapp/templates-hidden/dashboard_customer.html
@@ -24,6 +24,17 @@
   <link href="/css/ui-lightness/jquery-ui-1.8.17.custom.css" rel="stylesheet"/>
   <script id="jquery" src="/js/jquery.js" type="text/javascript"></script>
   <script src="/js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
+  <script>
+    $(function(){
+        var ret = "";
+        if (isMobile.any) {
+          for (var i = 0; i < 7; i++) {
+            ret += '<br/>'
+          };
+          $("#mobilespace").html(ret);
+        }
+    })
+  </script>  
 
   <link rel="stylesheet" type="text/css" href="/css/jquery.weekcalendar.css" />
   <link rel="stylesheet" type="text/css" href="/skins/default.css" />
@@ -144,6 +155,8 @@
   <div class="container-fluid">
     <div class="sidebar">
       <div>
+        <div class="input" id="mobilespace">
+        </div>
         <!--ul class="show_mobile">
         Não ficou legal qdo nao é mobile
         trocar por <br/> ou fazer um onlymobile
