--- a/src/main/webapp/templates-hidden/financial.html
+++ b/src/main/webapp/templates-hidden/financial.html
@@ -10,6 +10,8 @@
       <link class="lift:SecuritySnippet.isEgrexSystem" rel="shortcut icon" href="/images/logo_ftr_egrex.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEphysioSystem" rel="shortcut icon" href="/images/logo_ftr_ephysio.ico" type="image/x-icon" />
       <link class="lift:SecuritySnippet.isEbellepetSystem" rel="shortcut icon" href="/images/logo_ftr_ebellepet.ico" type="image/x-icon" />
+      <!-- Não deixa pinças no android -->
+      <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
       <title>Financeiro</title>
       <!-- Le fav and touch icons -->
       <link rel="shortcut icon" href="/images/icon.ico">
@@ -24,6 +26,18 @@
       <link href="/css/ui-lightness/jquery-ui-1.8.17.custom.css" rel="stylesheet"/>
       <script id="jquery" src="/js/jquery.js" type="text/javascript"></script>
       <script src="/js/jquery-ui-1.8.16.custom.min.js" type="text/javascript"></script>
+      <script>
+        $(function(){
+            var ret = "";
+            if (isMobile.any) {
+              for (var i = 0; i < 7; i++) {
+                ret += '<br/>'
+              };
+              $("#mobilespace").html(ret);
+            }
+        })
+      </script>  
+
       <script type='text/javascript' src='/libs/jquery-ui-i18n.js'></script><script src="/js/datetimepicker/jquery.datetimepicker.js"></script>
 <style>
     @import url("/js/datetimepicker/jquery.datetimepicker.css");
@@ -146,6 +160,8 @@
     <div class="container-fluid">
       <div class="sidebar">
         <div>
+          <div class="input" id="mobilespace">
+          </div>
           <h5>Caixa</h5>
           <ul>
             <li>
