--- a/src/main/webapp/unit/edit.html
+++ b/src/main/webapp/unit/edit.html
@@ -2,7 +2,7 @@
   <span>
     <form   class="lift:UnitSnippet.maintain">
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/unit/list">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/unit/edit">Inserir novo</a>
@@ -63,7 +63,7 @@
             <div class="input">
               <div class="input-prepend" style='float:left; padding-right:10px'>
                 <span class="add-on"><img src='/images/sex.png'/></span> 
-                <select id="defaultSex" name="defaultSex" ></select>
+                <select class="medium" id="defaultSex" name="defaultSex" ></select>
                 <span class="help-block">Sexo atribuido aos novos cadastrados</span>
               </div>
             </div>
