--- a/src/main/webapp/unit/list.html
+++ b/src/main/webapp/unit/list.html
@@ -1,6 +1,6 @@
 <div id="main" class="lift:surround?with=bootstrap_large;at=content">
 	<div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
 		<a class="btn primary" href="/unit/edit">Inserir novo</a>
 	</div>
 	<div class='filter block-message success"'>
