--- a/src/main/webapp/user/terms.html
+++ b/src/main/webapp/user/terms.html
@@ -2,7 +2,7 @@
     <form method="post">
       <div class="well">
 	  	<h1><span class="lift:CompanySnippet.thumb"> </span>Termos e Condições</h1>
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/user/list_terms">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/user/terms">Inserir novo</a>
@@ -55,7 +55,7 @@
           </div>                       
         </span>
       <div class="well">
-        <label for="btn"></label>
+        <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/user/list_terms">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
         <a class="btn primary" href="/user/terms">Inserir novo</a>
