summary fields disabled were almost unreadable in ios devices

--- a/src/main/webapp/customer/customer_account_report.html
+++ b/src/main/webapp/customer/customer_account_report.html
@@ -163,23 +163,23 @@
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <div style="float:left; padding-right:10px" class="input-prepend">
                         <span class="add-on"><img src="/images/count.png" width="16"></span>
-                        <input class="small" id="totalc" name="totalc" size="19" placeholder="0" type="text">
+                        <input style="color:black;" disabled='true' class="small" id="totalc" name="totalc" size="19" placeholder="0" type="text">
                         <span class="help-block">Total</span>
                       </div>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/add.png" width="16"></span>
-                      <input class="small" id="credit" name="credit" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="credit" name="credit" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Crédito</span>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/remove.png" width="16"></span>
-                      <input class="small" id="debit" name="debit" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="debit" name="debit" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Débito</span>
                     </div>
                     <div style="float:left; padding-right:10px" class="input-prepend">
                       <span class="add-on"><img src="/images/money.png" width="16"></span>
-                      <input class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Total</span>
                     </div>
                   </div>
