--- a/src/main/webapp/financial_admin/sales_and_commission.html
+++ b/src/main/webapp/financial_admin/sales_and_commission.html
@@ -222,27 +222,27 @@
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/add.png" width="16"></span>
-                      <input class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Faturamento</span>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/remove.png" width="16"></span>
-                      <input class="small" id="commission" name="commission" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="commission" name="commission" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Comissão</span>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/money.png" width="16"></span>
-                      <input class="small" id="balance" name="balance" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="balance" name="balance" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Saldo</span>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/money.png" width="16"></span>
-                      <input class="small" id="paid" name="paid" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="paid" name="paid" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Vales</span>
                     </div>
                     <div class="input-prepend" style="float:left; padding-right:10px">
                       <span class="add-on"><img src="/images/money.png" width="16"></span>
-                      <input class="small" id="liquid" name="liquid" size="19" placeholder="0.00" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="liquid" name="liquid" size="19" placeholder="0.00" type="text">
                       <span class="help-block">Líquido</span>
                     </div>
                   </div>
