--- a/src/main/webapp/financial_cashier/comman_conference.html
+++ b/src/main/webapp/financial_cashier/comman_conference.html
@@ -120,17 +120,17 @@
                 <div class="inline-inputs">
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img src="/images/count.png" width="16"></span>
-                    <input class="small" id="count" name="count" size="19" placeholder="0.00" type="text">
+                    <input style="color:black;" disabled='true' class="small" id="count" name="count" size="19" placeholder="0.00" type="text">
                     <span class="help-block">Nro de comandas</span>
                   </div>
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img src="/images/money.png" width="16"></span>
-                    <input class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
+                    <input style="color:black;" disabled='true' class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
                     <span class="help-block">Total de serviços</span>
                   </div>
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img src="/images/remove.png" width="16"></span>
-                    <input class="small" id="total_out" name="total_out" size="19" placeholder="0.00" type="text">
+                    <input style="color:black;" disabled='true' class="small" id="total_out" name="total_out" size="19" placeholder="0.00" type="text">
                     <span class="help-block">Saídas</span>
                     <a href="" class="_popover_basic" rel="popover" data-content="Este relatório pode ser usado para conferência de comandas, acessado através do menu ou do atalho K, ou para conferência detalhada do caixa, acessado através da tela de fechamento. As saídas e o respectivo total, só são exibidos nesta segunda opção." data-original-title="Informação">
                       <img width='20' src="/images/info.gif"/>
@@ -138,7 +138,7 @@
                   </div>
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img src="/images/add.png" width="16"></span>
-                    <input class="small" id="total_in" name="total_in" size="19" placeholder="0.00" type="text">
+                    <input style="color:black;" disabled='true' class="small" id="total_in" name="total_in" size="19" placeholder="0.00" type="text">
                     <span class="help-block">Entradas</span>
                   </div>
                 </div>
