--- a/src/main/webapp/commission_conference_user.html
+++ b/src/main/webapp/commission_conference_user.html
@@ -53,7 +53,7 @@
       <div class="input">
         <div class="input-prepend">
           <span class="add-on"><img src="/images/money.png" width="16"></span>
-          <input class="mini disabled" disabled='true' id="total" name="total" size="30" type="text"/>
+          <input style="color:black;" class="mini disabled" disabled='true' id="total" name="total" size="30" type="text"/>
           <span class="help-block">Valor que deve ser pago ao <span data-i18n='Profissional'></span></span>
         </div>
       </div>
@@ -63,7 +63,7 @@
       <div class="input">
         <div class="input-prepend">
           <span class="add-on"><img src="/images/cheque.png" width="16"></span>
-          <input class="mini disabled" disabled='true' id="total_paid" name="total_paid" size="30" type="text"/>
+          <input style="color:black;" class="mini disabled" disabled='true' id="total_paid" name="total_paid" size="30" type="text"/>
           <span class="help-block">Valor que já foi pago ao <span data-i18n='Profissional'></span></span>
         </div>
       </div>
@@ -73,7 +73,7 @@
       <div class="input">
         <div class="input-prepend">
           <span class="add-on"><img src="/images/money.png" width="16"></span>
-          <input class="mini disabled" disabled='true' id="to_pay" name="to_pay" size="30" type="text"/>
+          <input style="color:black;" class="mini disabled" disabled='true' id="to_pay" name="to_pay" size="30" type="text"/>
           <span class="help-block">Valor que deve ser pago ao <span data-i18n='Profissional'></span></span>
         </div>
       </div>
@@ -95,3 +95,4 @@
       </tr>
     </table>
  </div>
+ 
