--- a/src/main/webapp/financial/commission_report.html
+++ b/src/main/webapp/financial/commission_report.html
@@ -257,7 +257,7 @@
           <div class="inline-inputs">
             <div class="lift:SecuritySnippet.isShowSalesToUser input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
-              <input class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
+              <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
               <span class="help-block">Total faturado</span>
               <a href="" class="_popover_basic" rel="popover" data-content="O Total faturado pode ser maior que a soma dos serviços listados na tabela abaixo, porque serviços sem comissão são somados como faturados, apesar de não aparecerem na tabela. Fique atento também à opção relatório sintético, se a mesma estiver desmarcada o valor do serviço na tabela é replicado de acordo com a quantidade de formas de pagamento usadas pelo cliente, neste caso é provável que a soma dos serviços na tabela seja maior que o total faturado. Se a opção relatório sintético estiver marcada a forma de pagamento é omitida." data-original-title="Informação">
                 <img width='20' src="/images/info.gif"/>
@@ -265,17 +265,17 @@
             </div>
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/user.png" width="16"></span>
-              <input class="small disabled value_to_env" data-env-value="COMISSAO" data-env-ext="COMISSAO_EXT" id="total_commission" name="total_commission" size="19" placeholder="0.00" type="text" disabled='true'>
+              <input style="color:black;" class="small disabled value_to_env" data-env-value="COMISSAO" data-env-ext="COMISSAO_EXT" id="total_commission" name="total_commission" size="19" placeholder="0.00" type="text" disabled='true'>
               <span class="help-block">Total de comissões</span>
             </div>
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/cheque.png" width="16"></span>
-              <input class="small disabled value_to_env" data-env-value="VALE" data-env-ext="VALE_EXT"" id="total_in_advance" name="total_in_advance" size="19" placeholder="0.00" type="text" disabled='true'>
+              <input style="color:black;" class="small disabled value_to_env" data-env-value="VALE" data-env-ext="VALE_EXT"" id="total_in_advance" name="total_in_advance" size="19" placeholder="0.00" type="text" disabled='true'>
               <span class="help-block">Vales e outros</span>
             </div>
             <div class="input-prepend" style="float:left; padding-right:10px">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
-              <input class="small disabled value_to_env" data-env-value="LIQUIDO" data-env-ext="LIQUIDO_EXT"" id="to_pay" name="to_pay" size="19" placeholder="0.00" type="text" disabled='true'>
+              <input style="color:black;" class="small disabled value_to_env" data-env-value="LIQUIDO" data-env-ext="LIQUIDO_EXT"" id="to_pay" name="to_pay" size="19" placeholder="0.00" type="text" disabled='true'>
               <span class="help-block">Líquido para pagamento</span>
             </div>
           </div>
