--- a/src/main/webapp/financial/payroll_liquid.html
+++ b/src/main/webapp/financial/payroll_liquid.html
@@ -86,7 +86,7 @@
           <div class="input">
             <div class="input-prepend">
               <span class="add-on"><img src="/images/money.png" width="16"></span>
-              <input class="mini disabled" disabled='true' id="total_paid" name="total_paid" size="30" type="text"/>
+              <input style="color:black;" disabled='true' class="mini disabled" disabled='true' id="total_paid" name="total_paid" size="30" type="text"/>
               <span class="help-block">Valor total a ser pago aos <span data-i18n='Profissionais'></span></span>
             </div>
           </div>
