--- a/src/main/webapp/financial_cashier/cashier_payment_types.html
+++ b/src/main/webapp/financial_cashier/cashier_payment_types.html
@@ -133,17 +133,17 @@
       <div class="inline-inputs">
         <div class="input-prepend" style="float:left; padding-right:10px">
           <span class="add-on"><img src="/images/money.png" width="16"></span>
-          <input class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
+          <input style="color:black;" disabled='true' class="small" id="total" name="total" size="19" placeholder="0.00" type="text">
           <span class="help-block">Total faturado</span>
         </div>
         <div class="input-prepend" style="float:left; padding-right:10px">
           <span class="add-on"><img src="/images/remove.png" width="16"></span>
-          <input class="small" id="total_out" name="total_out" size="19" placeholder="0.00" type="text">
+          <input style="color:black;" disabled='true' class="small" id="total_out" name="total_out" size="19" placeholder="0.00" type="text">
           <span class="help-block">Total saída</span>
         </div>            
         <div class="input-prepend" style="float:left; padding-right:10px">
           <span class="add-on"><img src="/images/add.png" width="16"></span>
-          <input class="small" id="total_in" name="total_in" size="19" placeholder="0.00" type="text">
+          <input style="color:black;" disabled='true' class="small" id="total_in" name="total_in" size="19" placeholder="0.00" type="text">
           <span class="help-block">Total entrada</span>
         </div>            
       </div>
