--- a/src/main/webapp/treatments_conferenc.html
+++ b/src/main/webapp/treatments_conferenc.html
@@ -178,11 +178,11 @@
             <div class="input">
               <div class="inline-inputs">
                 <div class="input-prepend" style="float:left; padding-right:10px">
-                  <input id="count" class="mini disabled" disabled='true'/>
+                  <input style="color:black;" id="count" class="mini disabled" disabled='true'/>
                 </div>
                 <div class="input-prepend lift:SecuritySnippet.isFinancialUser" style="float:left; padding-right:10px">
                   <span class="add-on"><img src="/images/money.png" width="16"></span>
-                  <input class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
+                  <input style="color:black;" class="small disabled" id="total" name="total" size="19" placeholder="0.00" type="text" disabled='true'>
                 </div>
               </div>
             </div>
