mobile improvements checkout

--- a/src/main/webapp/financial_admin/checkout_reopen.html
+++ b/src/main/webapp/financial_admin/checkout_reopen.html
@@ -57,6 +57,7 @@
                   <div class="input">
                     <div class="inline-inputs">
                       <div class="input-prepend" style='float:left; padding-right:10px'>
+                        <span class="add-on hide_mobile"><img width="16" src="/images/close_cash.png"></span> 
                         <select class="xlarge" id='cashiers_select'  name="cashiers"></select>
                         <span class="help-block">Selecione um caixa na lista ou digite o número</span>
                       </div>
