cover image mobile - enter btn

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,6 +41,9 @@
                <br/>
                <center>
                   <h4>
+                     <a class="lift:SecuritySnippet.unLogged btn enter-now" href="/v2/login.html">
+                     <b>Entrar</b>
+                     </a><br/>
                      <a class="lift:SecuritySnippet.unLogged btn start-now" href="/new_company/add">
                      <b>Comece Agora !</b>
                      </a><br/>
