--- a/src/main/webapp/templates-hidden/index.html
+++ b/src/main/webapp/templates-hidden/index.html
@@ -2,6 +2,8 @@
 <html manifest="/cache.manifest">
    <head>
       <meta charset="utf-8">
+    <!-- Não deixa pinças no android -->
+    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
       <title></title>
       <!-- Le fav and touch icons -->
       <link rel="shortcut icon" href="/images/logo_ftr_vilarika.ico" type="image/x-icon" />
@@ -126,6 +128,13 @@
          position: relative;
          top: 234px;
          background-color: #ffffff;        
+         }
+         .enter-now{
+         background-color: red;
+         background-image: inherit;
+         border-radius: 14px;
+         font-size: 254%;
+         margin-bottom: 16px;
          }
          .start-now{
          background-color: #ffff00;
