company add - mobile

--- a/src/main/webapp/new_company/add.html
+++ b/src/main/webapp/new_company/add.html
@@ -3,12 +3,12 @@
 	<script src="/js/company_add_jquery.js" type="text/javascript"></script>
   <div>
 	<h3>Experimente por 30 dias gratuitamente</h3>
-    <a href="#"  class="_popover" rel="popover" data-content="Caso queira falar conosco (31) 99169-3247 - (31) 99154-0340, e-mail: suporte@vilarika.com.br " data-original-title="Duvidas?">
+    <a href="#"  class="_popover" rel="popover" data-content="Caso queira falar conosco (31) 99169-3247 - (31) 99154-0340, e-mail: suporte@vilarika.com.br " data-original-title="Dúvidas?">
         <img width='32' src="/images/question.png"/>
     </a>
 	<span class="span12">
-		<h5>Funcionalidades</h5>
-  		<span class="span3" style="float:left">
+		<h5 class="hide_mobile">Funcionalidades</h5>
+  		<span class="span3 hide_mobile" style="float:left">
             	<ul>
               <li>
                	<a href="#" class="_popover" rel="popover" data-content="Agendamento de clientes, agenda por grupo/especialidade de profissinal(Cabelereiros, Manicures), individual ou por unidade, lembretes de agendamento via SMS e E-mail" data-original-title="Agenda Completa">
@@ -83,7 +83,7 @@
 		            <label for="email">E-mail</label>
 		            <div class="input">
 		              <div class="input-prepend">
-		                <span class="add-on">@</span>
+		                <span class="add-on hide_mobile">@</span>
 		                <input type="email" id="email" name="email" size="16" type="text">
 		              </div>
 		              <span class="help-block">E-mail de contato precisa ser válido</span>
