summary fields disabled were almost unreadable in ios devices 2

--- a/src/main/webapp/reports/treatment_history.html
+++ b/src/main/webapp/reports/treatment_history.html
@@ -198,7 +198,7 @@
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <div style="float:left; padding-right:10px" class="input-prepend">
                       <span class="add-on"><img src="/images/count.png" width="16"></span>
-                      <input class="small" id="total" name="total" size="19" placeholder="0" type="text">
+                      <input style="color:black;" disabled='true' class="small" id="total" name="total" size="19" placeholder="0" type="text">
                       <span class="help-block">Total</span>
                     </div>
                   </div>
