--- a/src/main/webapp/user/terms.html
+++ b/src/main/webapp/user/terms.html
@@ -1,7 +1,7 @@
 <div id="main" class="lift:surround?with=user;at=content">
     <form method="post">
       <div class="well">
-	  	<h1><span class="lift:CompanySnippet.thumb"> </span>Termos e Condições</h1>
+	  	<h1>Termos e Condições</h1>
         <label class="hide_mobile" for="btn"></label>
         <a class="btn primary" href="/user/list_terms">Lista</a>
         <input class="btn success" type="submit" value="Salvar">
