docs issuperadm - permissions review - footer review

--- a/src/main/webapp/activity/busy_manager.html
+++ b/src/main/webapp/activity/busy_manager.html
@@ -42,7 +42,7 @@
             <label for="name">Mostrar Horário de Trabalho</label>
               <div class="input">
                 <div class="inline-inputs">
-                  <input type="checkbox" id="show_work_hours">
+                  <input type="checkbox" id="show_work_hours" checked="true">
                 </div>
               </div>
           </div>           
