--- a/src/main/webapp/templates-hidden/footer.html
+++ b/src/main/webapp/templates-hidden/footer.html
@@ -14,18 +14,18 @@
 	         <h4>Veja Também</h4>
 	         <li><a href="http://www.e-smile.com.br/">e-Smile</a></li>
 	         <li><a href="http://www.gerirme.com.br/">Gerir-me</a></li>
-	         <li><a href="http://www.transitobh.com.br/">TransitoBH</a></li>
-	         <li><a href="http://www.ormuztech.com.br/">OrmuzTech</a></li>
+	         <!--li><a href="http://www.transitobh.com.br/">TransitoBH</a></li>
+	         <li><a href="http://www.ormuztech.com.br/">OrmuzTech</a></li-->
 	       </ul>
 
-	       <ul class="footer_nav">
+	       <!--ul class="footer_nav">
 	         <h4>Mobile Apps</h4>
 	         <li><a href="#"><span class='system-name'></span> iPhone</a></li>
 	         <li><a href="https://play.google.com/store/apps/details?id=com.ebelle.html"><span class='system-name'></span> Android</a></li>
 	         <li><a href="https://play.google.com/store/apps/details?id=com.gerirme.html">Gerir-me</a></li>
 	         <li><a href="https://play.google.com/store/apps/details?id=br.com.transitobh.android
 ">TransitoBH</a></li>
-	       </ul>
+	       </ul-->
 
 	       <ul class="footer_nav">
 	         <h4>Documentação</h4>
@@ -47,5 +47,5 @@
 		data-width="450"
 		data-show-faces="true">
 		</div>
-  <p><a href="http://www.vilarika.com.br/">&copy; VilarikA 2008 - 2016</a></p>
+  <p><a href="http://www.vilarika.com.br/">&copy; VilarikA 2008 - 2018</a></p>
 </span>
