--- a/src/main/webapp/user/edit.html
+++ b/src/main/webapp/user/edit.html
@@ -286,36 +286,36 @@
                             <input name="groupPermission_text"/>
                         </span>
                         <div class="form-inline">
-                            <div class="form-group">
-                                <label>Permissões</label>
-                                <select multiple="multiple" id="groupPermission" name="groupPermission">
-                                    <option class="lift:SecuritySnippet.isSuperAdmin" value="1000">Super Admin</option>
-                                    <option class="lift:SecuritySnippet.isSupportAdmin" value="900">Suporte Admin</option>
-                                    <option value="1">Administrador</option>
-                                    <option class="lift:SecuritySnippet.isNotEgrexSystem" value="13">Clientes</option>
-                                    <option class="lift:SecuritySnippet.isEgrexSystem" value="13">Membros</option>
-                                    <option class="lift:SecuritySnippet.isMedicalSystem" value="19">Prontuário</option>
-                                    <option class="lift:SecuritySnippet.hasBudgetModule" value="22">Orçamento</option>
-                                    <option value="5">Serviços</option>
-                                    <option class="lift:SecuritySnippet.hasInventoryModule" value="2">Estoque</option>
-                                    <option class="lift:SecuritySnippet.hasFinancialModule" value="3">Financeiro</option>
-                                    <option value="10">Relatórios</option>
-                                    <option class="lift:SecuritySnippet.hasFinancialModule" value="12">Caixa</option>
-                                    <option class="lift:SecuritySnippet.hasFinancialModule" value="15">Caixa Geral</option>
-                                    <option value="4">Agenda Geral</option>
-                                    <option value="20">Comanda Geral</option>
-                                    <option value="18">Comanda Senha</option>
-                                    <option class="lift:SecuritySnippet.hasFinancialModule" value="9">Gerente de Serviços</option>
-                                    <option class="lift:SecuritySnippet.hasInventoryModule" value="7">Gerente de Estoque</option>
-                                    <option class="lift:SecuritySnippet.hasFinancialModule" value="8">Gerente de Financeiro</option>
-                                    <option value="11">Gerente de Pessoas</option>
-                                    <option value="6">Prof Agenda</option>
-                                    <option value="21">Prof Agenda Geral</option>
-                                    <option value="16">Prof Comissão</option>
-                                    <option value="17">Prof Comanda</option>
-                                    <option class="lift:SecuritySnippet.isEgrexSystem" value="14">Somente Consulta</option>
-                                </select>
-                            </div>
+                          <div class="form-group">
+                            <label>Permissões</label>
+                            <select multiple="multiple" id="groupPermission" name="groupPermission">
+                              <option value="1">Administrador</option>
+                              <option class="lift:SecuritySnippet.isNotEgrexSystem" value="13">Clientes</option>
+                              <option class="lift:SecuritySnippet.isEgrexSystem" value="13">Membros</option>
+                              <option class="lift:SecuritySnippet.isMedicalSystem" value="19">Prontuário</option>
+                              <option class="lift:SecuritySnippet.hasBudgetModule" value="22">Orçamento</option>
+                              <option value="10">Relatórios</option>
+                              <option value="4">Agenda Geral</option>
+                              <option value="20">Comanda Geral</option>
+                              <option value="18">Comanda Senha</option>
+                              <option class="lift:SecuritySnippet.hasFinancialModule" value="9">Gerente de Serviços</option>
+                              <option value="5">. Serviços</option>
+                              <option class="lift:SecuritySnippet.hasInventoryModule" value="7">Gerente de Estoque</option>
+                              <option class="lift:SecuritySnippet.hasInventoryModule" value="2">. Estoque</option>
+                              <option class="lift:SecuritySnippet.hasFinancialModule" value="8">Gerente de Financeiro</option>
+                              <option class="lift:SecuritySnippet.hasFinancialModule" value="3">. Financeiro</option>
+                              <option class="lift:SecuritySnippet.hasFinancialModule" value="15">. Caixa Geral</option>
+                              <option class="lift:SecuritySnippet.hasFinancialModule" value="12">. . Caixa</option>
+                              <option value="11">Gerente de Pessoas</option>
+                              <option value="6">Prof Agenda</option>
+                              <option value="21">Prof Agenda Geral</option>
+                              <option value="16">Prof Comissão</option>
+                              <option value="17">Prof Comanda</option>
+                              <option class="lift:SecuritySnippet.isEgrexSystem" value="14">Somente Consulta</option>
+                              <option class="lift:SecuritySnippet.isSuperAdmin" value="1000">Super Admin</option>
+                              <option class="lift:SecuritySnippet.isSupportAdmin" value="900">Suporte Admin</option>
+                            </select>
+                          </div>
 
                             <div class="form-group">
                                 <a data-original-title="Informação" data-content="Clique para abrir a documentação" data-help-url='/docs/permission.html' rel="popover" class="_popover_basic _help">
