--- a/src/main/webapp/customer/todo_list_report.html
+++ b/src/main/webapp/customer/todo_list_report.html
@@ -199,7 +199,7 @@
                   </div>
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <span class="add-on"><img width="16" src="/images/calendar_addon.png"></span>
-                    <input type="text" class="input-small date end_of_month" id='end_date' name="end_date" placeholder="Fim"/>
+                    <input type="text" class="input-small date to_day" id='end_date' name="end_date" placeholder="Fim"/>
                   </div>
                   <div class="input-prepend" style="float:left; padding-right:10px">
                     <input type="number" class="mini local_storage" id='daysahead' name="daysahead" value="7"/>
