quiz order show and reorg 10 10

--- a/src/main/webapp/quiz/list_question.html
+++ b/src/main/webapp/quiz/list_question.html
@@ -34,6 +34,7 @@
 			<th>Id</th>
 			<th>Nome</th>
 			<th>Seção</th>
+			<th>Ordem</th>
 			<th>Observação</th>
 			<th>Ações</th>
 		</thead>
@@ -47,6 +48,9 @@
 				</td>
 				<td>
 					<f:quizsectionname></f:quizsectionname>
+				</td>
+				<td>
+					<f:orderinsection></f:orderinsection>
 				</td>
 				<td>
 					<f:obs></f:obs>
