--- a/src/main/webapp/quiz/list_section.html
+++ b/src/main/webapp/quiz/list_section.html
@@ -26,6 +26,8 @@
 			<th>Id</th>
 			<th>Nome</th>
 			<th><span data-i18n='Questionário'></span></th>
+			<th>Ordem</th>
+			<th>Obs</th>
 			<th>Ações</th>
 		</thead>
 		<tbody>
@@ -38,6 +40,9 @@
 				</td>
 				<td>
 					<f:quizname></f:quizname>
+				</td>
+				<td>
+					<f:orderinquiz></f:orderinquiz>
 				</td>
 				<td>
 					<f:obs></f:obs>
