--- a/src/main/webapp/quiz/list_domainitem.html
+++ b/src/main/webapp/quiz/list_domainitem.html
@@ -34,6 +34,7 @@
 			<th>Id</th>
 			<th>Nome</th>
 			<th>Domínio</th>
+			<th>Ordem</th>
 			<th>Ações</th>
 		</thead>
 		<tbody>
@@ -46,6 +47,9 @@
 				</td>
 				<td>
 					<f:quizdomainname></f:quizdomainname>
+				</td>
+				<td>
+					<f:orderindomain></f:orderindomain>
 				</td>
 				<td>
 					<form method="post">
