--- a/src/main/webapp/quiz_admin/edit_domainitem.html
+++ b/src/main/webapp/quiz_admin/edit_domainitem.html
@@ -38,9 +38,9 @@
             </div>
           </div>
           <div class="clearfix">
-            <label for="orderindoamin">Ordem</label>
+            <label for="orderindomain">Ordem</label>
             <div class="input">
-              <input class="mini" id="orderindoamin" name="orderindoamin" size="5 " value = "10" type="text"/>
+              <input class="mini" id="orderindomain" name="orderindomain" size="5 " value = "10" type="text"/>
               <span class="help-block">Ordem no domínio</span>
             </div>
           </div>
